--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hriatnaeng-web-admin-portal",
+  "name": "hriatnaeng-web-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
